1998-12-23  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (preferences_restore): Make use of the changed
 	session-management support.
	(session_management_init): Removed setting the of the discard
 	command.
	(_preferences_save): Set the discard command here.

1998-12-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* main.c (game_widget_create): Use gtk_widget_set_usize() instead
	of gnome_canvas_set_size().

1998-12-06  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (session_management_init): Enabled
 	'discard_command'.

1998-11-29  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (preferences_dialog_new): Replaced
 	'gtk_container_border_width' with
 	'gtk_container_set_border_width'.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* main.c (show_scores_cb): added GPOINTER_TO_INT 

1998-11-28  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (preferences_dialog_new): Show the 'scrolled'
 	widget.

Mon Nov 23 15:10:07 EST 1998 Gregory McLean <gregm@comstar.net>

	* preferences.c : gtk_clist updates to match the new api.
	its not #ifdef'd around or anything as it appears 1.1.5 will
	be needed for everything else.

1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* main.c (parse_func): New function.

	* preferences.c (discard_session_file): New function.
	(session_management_init): Added code, to set the session
 	management's discard command.

1998-11-22  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* preferences.c (preferences_dialog_new): Used 'GNOME_PAD_*' for
 	padding.
	(discard_session_file): New function.
	(session_management_init): Added code, to set the session
 	management's discard command.

	* types.h: Moved the declaration of 'TranslationEntry' to game.c.

	* game.c: Removed obsolete definition of 'cave_load'.

	* main.c (countdown_timeout_function): Removed check of the
 	'gnome_score_log' return value.