@@ -1,3 +1,12 @@
+1999-01-07  Nat Friedman  <nat@nat.org>
+
+	* main.c (main): Install menu hints.
+
+	Use the GNOMEUIINFO menu item macros where possible.
+
+	Rearranged the menus to match the standard.  Added the Settings
+ 	top-level menu.
+
 1998-12-23  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
 
 	* preferences.c (preferences_restore): Make use of the changed
